# Mini-Di-Dash

./: CMakeLists.txt  Main.qml  README.md  ToBuy.txt  bridge.py  main.cpp  qmldir
